src/test/groovy/org/jalasoft/gradle/plugins/enforce/interceptor/resources/objects/ObjectFormulaTruncated.object
<CustomObject>
    <deleteConstraint>Cascade</deleteConstraint>
    <nameField>
        <label>Object1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
            <fullName>HHId__c</fullName>
            <formula>""</formula>
      <inlineHelpText>holds the ID  of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
            <label>HHId</label>
            <type>    Text      </type>
        </fields>
        <fields>
            <fullName>HHId__c</fullName>
            <formula>""</formula>
            <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
            <label>HHId</label>
            <type>   Text     </type>
        </fields>
        <fields>
            <fullName>HHId__c</fullName>
            <formula>""</formula>
            <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
            <label>HHId</label>
            <type>   Text       </type>
        </fields>

    <fields>
            <fullName>Results__c</fullName>
            <formula>""</formula>
            <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
            <label>Results</label>
            <type>  Text  </type>
        </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type> Date</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type> DateTime</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Number</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Currency</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Checkbox</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Number</type>
    </fields>
 <fields>

        <fullName>CurrencyProposedRevenue__c</fullName>


        <formula>0</formula>

        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>

        <label>CurrencyProposedRevenue</label>

        <precision>18</precision>


        <scale>2</scale>


        <type>Currency</type>

    </fields>

 <fields>

        <fullName>ProposedRevenue__c</fullName>

        <defaultValue>100</defaultValue>


        <label>ProposedRevenue</label>

        <precision>18</precision>


        <scale>2</scale>


        <type>Currency</type>

    </fields>
    <fields>
        <fullName>Unique_Volunteer_Count__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>